# mect_1ano

./: .gitattributes  .gitignore  README.md
AAD/: README.md
AAD/Assignment1/parallelDecoder/: decoder1bit.vhd.bak  decoder8to12.vhd  decoder8to12.vhd.bak  decoderlast.vhd  decoderlast.vhd.bak  logic.vhd.bak  parallelDecoder.qpf  parallelDecoder.qsf  parallelDecoder.qws  parallelDecoder.vhd  parallelDecoder.vwf
AAD/Assignment1/parallelEncoder/: parallelEncoder.qpf  parallelEncoder.qsf  parallelEncoder.qws  parallelEncoder.vhd  parallelEncoder.vhd.bak  parallelEncoder.vwf
AAD/Assignment1/serialEncoder/: bitEncoder.vhd  controlUnit.vhd.bak  controlUnit.vwf  devStore.vwf  logic.vhd  logic.vhd.bak  serialEncoder.qpf  serialEncoder.qsf  serialEncoder.qws  serialEncoder.vhd  serialEncoder.vhd.bak  serialEncoder.vwf  storeDev.vhd  storeDev.vhd.bak  testAll16values.vwf  testAll16valuesWithRandomResets.vwf
AAD/Assignment2/: README.md  results .xlsx
AAD/Projetos_Guioes/Guiao5ex1/: flipFlopD.qpf  flipFlopD.qsf  flipFlopD.qws  flipFlopD.vhd  flipFlopD.vwf
AAD/Projetos_Guioes/Guiao5ex2_2/: lRot_8bit.qpf  lRot_8bit.qsf  lRot_8bit.qws  lRot_8bit.vwf
AAD/Projetos_Guioes/Guiao5ex2_3/: lRot_8bit.vhd  lRot_8bit.vhd.bak  rot_8bit.qpf  rot_8bit.qsf  rot_8bit.qws  rot_8bit.vhd  rot_8bit.vwf
AAD/Prática/Guiao10/: Guiao10.xlsx
AAD/Prática/Guiao2/: ex1.ods  ex1.txt  ex2.txt  ex3.txt
AAD/Prática/Guiao3/: ex2.txt  ex3.txt  ex_1_b.s  ex_2.s  ex_3_v1.s  ex_3_v2.s
AAD/Prática/Guiao4/: ex4.txt  ex_4_v1.s  ex_4_v2.s
AAD/Prática/Guiao7/: ex1.txt  ex2.txt
AAD/Prática/Guiao8/: ex1.ods
AC/: README.md
AC/Projeto/: Aveiro.txt  Coimbra.txt  DCA1.txt  DCA2.txt  DCC1.txt  DCL1.txt  DCP1.txt  DCP2.txt  Lisboa.txt  Porto.txt  Projeto.gns3  README.md  net-ip-map.md
AC/Prática/guiao1/: ex4.pcap  ex8.txt  guiao1.gns3
AC/Prática/guiao2/: ex1.txt  ex12.txt  ex13.txt  ex14.txt  ex15.txt  ex4.txt  ex6.txt  ex7.txt  ex9.txt  guiao2.gns3
AC/Prática/guiao3/: ex11.txt  ex14.txt  ex15.txt  guiao3.gns3
AC/Prática/guiao3v2/: ex16.txt  guiao3.gns3
AC/Prática/guiao4/: ex3.pcapng  ex3.txt  ex5.txt  ex7_PE1_Core.pcapng  ex7_PE2_Core.pcapng  ex7_PE3_Core.pcapng  ex8.txt  ex8_PE1.txt  ex8_PE2.txt  ex8_PE3.txt  guiao4.gns3
AC/Prática/guiao5/: guiao5.gns3
ASE/: README.md
ASE/Projeto/: LICENSE  README.md
ASE/Projeto/analyse_spiffs/: CMakeLists.txt  app.py  data_Thu_Jun_29_12:44:11_2023.json  requirements.txt  sdkconfig  sdkconfig.defaults  sdkconfig.old
ASE/Projeto/esp32cam/: CMakeLists.txt  sdkconfig  sdkconfig.defaults  sdkconfig.old
ASE/Projeto/recover_data/: .gitignore  CMakeLists.txt  graphic.py  sdkconfig  sdkconfig.old
ASE/Projeto/rover/: CMakeLists.txt  partitions.csv  sdkconfig  sdkconfig.old
ASE/Projeto/webapp/: generate-data.py  server.js
ASE/Prática/: README.md
ASE/Prática/adc_demo_continuous/: CMakeLists.txt
ASE/Prática/blink/: sdkconfig
ASE/Prática/freq_game/: CMakeLists.txt
ASE/Prática/freq_game_gptimer/: CMakeLists.txt
ASE/Prática/freq_game_timer/: CMakeLists.txt
ASE/Prática/pwm_demo/: CMakeLists.txt
ASE/Prática/spi_example/: CMakeLists.txt  SPIDemo.c
ASE/Prática/temperature_register/: .gitignore  CMakeLists.txt  requirements.txt  temp_graphic.py
CM/: README.md
CM/Projeto/: README.md
CM/Projeto/code/: acls.yaml  docker-compose.yml  faucet_acls.yaml  faucet_traffic.yaml  faucet_tutorial.yaml  faucet_vlans.yaml  mn-acls.py  mn-controllers.py  mn-onos.py  mn-sdn-app.py  mn-traffic.py  mn-vlans.py  onos-6633.yml
CM/Prática/Guiao1/: UA.CM.Lab1.Cap.Auth.Desauth.5ghz.pcapng  ex10.pcapng  ex13.pcapng  ex15.pcapng  ex16.pcapng  ex18.txt  ex19.txt  ex20.pcapng  ex22.txt  ex2_10.txt  ex2_4.txt  (+10 more)
EGS/: 98485.ovpn  README.md  egs.csv
EGS/Projeto/: README.md  deployment.yaml  storage.yaml
EGS/gic-egs-main/: README.md
IC/: README.md
IC/Projetos/: .gitignore
IC/Projetos/proj1/sndfile-example-src/: CMakeLists.txt  Makefile  README  lossy_decoder.cpp  wav_dct.cpp  wav_effects.cpp  wav_hist.cpp  wav_hist.h  wav_quant.cpp
IC/Projetos/proj2/opencv-src/: CMakeLists.txt  cp_image.cpp  golomb.h  golomb_decoder.cpp  image_decoder.cpp  image_encoder.cpp  imageauto.py  mirror_image.cpp  negative_image.cpp  rotate_image.cpp
IC/Projetos/proj3/video-src/: CMakeLists.txt  Makefile  YUV4MPEG2Reader.h  auto-inter-lossy.py  auto-inter.py  auto-intra-lossy.py  auto-intra.py  bitStream.h  interframe_decoder.cpp  interframe_encoder.cpp  intraframe_decoder.cpp  intraframe_encoder.cpp  lossy_inter_decoder.cpp  lossy_inter_encoder.cpp  lossy_intra_decoder.cpp  lossy_intra_encoder.cpp  video_cmp.cpp
IC/Prática/sndfile-example-src/: CMakeLists.txt  wav_hist.cpp  wav_hist.h
MDRS/: README.md
MDRS/Projetos/: LICENSE  Simulator3A.m  Simulator4A.m  Simulator4B.m  ex1c.m  ex2.m  ex3.m
RSA/: README.md
RSA/Projeto/: README.md  batman-config.txt  client.sh  client_for_dashboard.sh  create_batman_interface.sh  iptables.sh  main.ipynb  restore_wifi_interface.sh  server.sh
SD/: README.md
SRC/: README.md
(+1942 files in other folders)
